fix: further spacing fixes (#534)

--- a/packages/sections/src/scss/_sections.scss
+++ b/packages/sections/src/scss/_sections.scss
@@ -2,7 +2,7 @@
 @use "global" as *;
 
 .uq-section {
-  margin-bottom: var(--section-gap);
+  margin-bottom: var(--section-spacing);
 }
 
 .uq-section__header {
